src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client (クライアント)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date (日付)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimbursed (払い戻し済み)</label>
        <type>Checkbox</type>
    </fields>
    <label>経費</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Client__c</columns>
        <columns>Date__c</columns>
        <columns>Reimbursed__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>経費名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>